# browser-brain

./: README.md
backend/: .gitignore  pyproject.toml
backend/src/: main.py  setup.py  unsetup.py
backend/src/ai/: services.py
backend/src/api/: models.py  routes.py
backend/src/aws/: services.py
backend/src/chat_history/: services.py
backend/src/config/: config.py
backend/src/fast_api/: models.py  routes.py  services.py
backend/src/qdrant/: qdrant_manager.py  services.py
backend/src/supabase_db/: schemas.txt  services.py
web-extension/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.mts  vite.config.ts
web-extension/public/: manifest.json
web-extension/src/: background.ts  content.ts  globals.css  types.ts
web-extension/src/components/: AIMessageBlock.tsx  ChatApp.tsx  ChatHeader.tsx  ChatHistory.tsx  ChatInput.tsx  LoadingIndicator.tsx  UserMessageBubble.tsx  llmQueryBox.tsx
web-extension/src/popup/: injector.ts  popup.html  popup.tsx
