[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.38.41",
    "fastapi>=0.115.13",
    "openai>=1.90.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.0",
    "python-dotenv>=1.1.0",
    "qdrant-client>=1.14.3",
    "supabase>=2.16.0",
    "tiktoken>=0.9.0",
    "uvicorn>=0.34.3",
]
